I love you all 18.1.2019

--- a/webApp/src/app/app.component.html
+++ b/webApp/src/app/app.component.html
@@ -9,7 +9,10 @@
 </div>
 <button (click)='true'>Click</button>
 <hr/>
-<app-lifecycle>lalalalala</app-lifecycle>
+<app-menu></app-menu>
+<hr/>
+<router-outlet></router-outlet>
+<!-- <app-lifecycle>lalalalala</app-lifecycle> -->
 <!-- <app-services></app-services> -->
 <!-- <app-directives></app-directives> -->
 <!-- <app-pay-calc (outData)="doOutData($event)"></app-pay-calc>
