Template driven form

--- a/webApp/src/app/menu/menu.component.html
+++ b/webApp/src/app/menu/menu.component.html
@@ -3,3 +3,4 @@
 <a routerLink="/payCalc" routerLinkActive="tiki">PayCalc</a> &nbsp;&nbsp;
 <a routerLink="/home/freyja" routerLinkActive="tiki">Freyja</a> &nbsp;&nbsp;
 <a routerLink="/observe" routerLinkActive="tiki">Observables</a> &nbsp;&nbsp;
+<a routerLink="/forms" routerLinkActive="tiki">Forms</a> &nbsp;&nbsp;
